--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          bootstrap="tests/bootstrap.php"
         >
     <testsuites>
-        <testsuite name="Hubout Test Suite">
+        <testsuite name="Skeleton Test Suite">
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
